--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num = "*"
+num-traits = { version = "*", default_features = false, features = ["std"] }
 serde = {version = "*", features=["derive"]}
 intersect_iter = "0.1.0"
