--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num-traits = { version = "*", default_features = false, features = ["std"] }
-serde = {version = "*", features=["derive"]}
+num-traits = { version = "0.2.15", default_features = false, features = ["std"] }
+serde = { version = "1.0.145", features = ["derive"] }
 intersect_iter = "0.1.0"
